Rename package an repo to mousam
- Rename app name to mousam
- Rename app id to io.github.amit9838.mousam

--- a/website/index.html
+++ b/website/index.html
@@ -11,15 +11,15 @@
         integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js" defer></script>
-    <title>Weather App</title>
+    <title>Mousam App</title>
 </head>
 
 <body>
     <div class="header">
         <div class="header-left">
-            <img src="https://github.com/amit9838/weather/blob/master/data/icons/hicolor/scalable/apps/io.github.amit9838.weather.svg?raw=true"
+            <img src="https://github.com/amit9838/mousam/blob/master/data/icons/hicolor/scalable/apps/io.github.amit9838.mousam.svg?raw=true"
                 width="70">
-            <h1 class="title">Weather</h1>
+            <h1 class="title">Mousam</h1>
         </div>
         <div class="header-right">
             <nav>
@@ -29,7 +29,7 @@
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
-            <a href="https://github.com/amit9838/weather" target="_blank">
+            <a href="https://github.com/amit9838/mousam" target="_blank">
                 <h2 class="github-btn">
                     <i class="fa-brands fa-github"></i>
                     Github
@@ -42,12 +42,12 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="https://raw.githubusercontent.com/amit9838/weather/master/screenshots/ss2-thunderstorm.png?raw=true#gh-dark-mode-only"
+            <img src="https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss2-thunderstorm.png?raw=true#gh-dark-mode-only"
                 style="width:100%">
         </div>
 
         <div class="mySlides fade">
-            <img src="https://raw.githubusercontent.com/amit9838/weather/master/screenshots/ss4-light_mode.png?raw=true#gh-light-mode-only"
+            <img src="https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss4-light_mode.png?raw=true#gh-light-mode-only"
                 style="width:100%">
         </div>
 
@@ -76,16 +76,16 @@
 
         <h2>Installation</h2>
         <img
-            src="https://img.shields.io/github/v/release/amit9838/weather?style=flat&label=Latest+Release&color=%234a92ff">
+            src="https://img.shields.io/github/v/release/amit9838/mousam?style=flat&label=Latest+Release&color=%234a92ff">
 
         <h3 class="subheading">Get it from flathub</h3>
-        <a href='https://flathub.org/apps/io.github.amit9838.weather' target="_blank"><img width='240'
+        <a href='https://flathub.org/apps/io.github.amit9838.mousam' target="_blank"><img width='240'
                 alt='Download on Flathub' src='https://dl.flathub.org/assets/badges/flathub-badge-en.png' /></a>
         <p>Or you can use the terminal:</p>
         <pre>
 <code>flatpak install flathub</code>
 
-<code>flatpak install io.github.amit9838.weather</code>
+<code>flatpak install io.github.amit9838.mousam</code>
         </pre>
 
         <h3 class="subheading">Get it from Snapstore</h3>
@@ -98,7 +98,7 @@
     <section id="about" class="about">
         <h2>About</h2>
         <p>Beautiful and lightweight weather app build using Gtk4, Libadwaita and Python. </p>
-        <p>View all contributors on <a href="https://github.com/amit9838/weather/graphs/contributors" target="_blank">
+        <p>View all contributors on <a href="https://github.com/amit9838/mousam/graphs/contributors" target="_blank">
                 <i class="fa-brands fa-github"></i> GitHub</a></p>
     </section>
 
@@ -122,7 +122,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Weather App. All rights reserved.</p>
+        <p>&copy; 2024 Mousam App. All rights reserved.</p>
     </footer>
     <script>
         // Smooth scrolling for navigation links
