--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
         integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js" defer></script>
-    <title>Mousam App</title>
+    <title>Mousam</title>
 </head>
 
 <body>
@@ -93,6 +93,10 @@
                 src='https://github.com/snapcore/snap-store-badges/blob/master/EN/%5BEN%5D-snap-store-black-uneditable.png?raw=true' /></a>
         <p>Or you can use the terminal:</p>
         <pre><code>sudo snap install mousam</code></pre>
+        
+        <h3 class="subheading">Install Debian Package</h3>
+        <p>Thanks to @hsbasu for maintaining Debian package</p>
+        <a href="https://github.com/amit9838/mousam/discussions/68">See Installation Instructions</a>
     </section>
 
     <section id="about" class="about">
@@ -104,7 +108,7 @@
 
     <section class="donation">
         <h2>Support</h2>
-        I hope you ❤️ the weather app, if you think it is worth supporting you can do so using below methods
+        I hope you ❤️ <b>Mousam</b> , if you think it is worth supporting you can do so using below methods
         <br>
         <br>
         <div align="center">
