update website and readme links

--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,12 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss2-thunderstorm.png?raw=true#gh-dark-mode-only"
+            <img src="https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss5-overcast.png?raw=true#gh-dark-mode-only"
+                style="width:100%">
+        </div>
+      
+        <div class="mySlides fade">
+            <img src="https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss1-dark_mode.png?raw=true#gh-dark-mode-only"
                 style="width:100%">
         </div>
 
